	PR c++/51507 	* search.c (at_function_scope_p): Also check cfun. 	* pt.c (tsubst_pack_expansion): Check it instead of 	cp_unevaluated_operand. 	(instantiate_template_1): Clear current_function_decl.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182668 138bc75d-0d04-0410-961f-82ee72b054a4